Version 2.2 release
Public WebSocket access fix.
Syncloop Internal MCP communication enhanced with MCPNest
Syncloop jar version 2.2 updated.
Stability fixes.
GUI enhancements.
